--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,8 @@
 ---
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
+
 const pageTitle = "About Me";
 const identity = {
     firstName: "Michal",
@@ -12,6 +16,10 @@ const skills = ["Kubernetes", "AWS"];
 const happy = true;
 const finished = false;
 const goal = 6;
+
+const skillColor = "navy";
+const fontWeight = 700;
+const textCase = "uppercase"
 ---
 
 <html lang="en">
@@ -21,11 +29,20 @@ const goal = 6;
         <meta name="viewport" content="width=device-width" />
         <meta name="generator" content={Astro.generator} />
         <title>{pageTitle}</title>
+        <style define:vars={{ skillColor, fontWeight, textCase }}>
+            h1 {
+                color: purple;
+                font-size: 4rem;
+            }
+            .skill {
+                color: var(--skillColor);
+                font-weight: var(--fontWeight);
+                text-transform: var(--textCase);
+            }
+        </style>
     </head>
     <body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-        <a href="/blog/">Blog</a>
+		<Navigation />
 
         <h1>{pageTitle}</h1>
         <h2>... and my new Astro site!</h2>
@@ -57,13 +74,21 @@ const goal = 6;
         </ul>
         <p>My skills are:</p>
         <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
 
         {happy && <p>I am happy to be learning Astro!</p>}
 
         {finished && <p>I finished this tutorial!</p>}
-        
-        {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
+
+        {
+            goal === 3 ? (
+                <p>My goal is to finish in 3 days.</p>
+            ) : (
+                <p>My goal is not 3 days.</p>
+            )
+        }
+
+        <Footer />
     </body>
 </html>
