--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,7 @@
 ---
-
+import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 ---
 <html lang="en">
 	<head>
@@ -10,9 +12,7 @@
 		<title>About</title>
 	</head>
 	<body>
-        <a href="/">Home</a>
-        <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+		<Navigation />
 
 		<h1>My Astro Learning Blog</h1>
 		<p>This is where I will post about my journey learning Astro.</p>	
@@ -21,5 +21,7 @@
 			<li><a href="/posts/post-2/">Post 2</a></li>
 			<li><a href="/posts/post-3/">Post 3</a></li>
 		</ul>
+
+		<Footer />
 	</body>
 </html>
